--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <script src="script.js" defer></script>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>DOM Pratice - Odin Project</title>
+   <button id="pedra">pedra</button>
 </head>
 <body>
    
